--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
                 <div class="shoe1">
                     <img class="logo1" src="logo.png">
                     <h1>U.S Department Of Justice</h1>
-                    <button>Learn More</button>
+                    <button id="scrollButton">Learn More</button>
                 </div>
                 <div class="shoe1">
                     <img class="logos" src="USMS.png">
                     <h1>U.S. Marshals Service</h1>
-                    <button>Learn More</button>
+                    <button id="scrollButton2" >Learn More</button>
                 </div>
                 
             </div>
