--- a/index.html
+++ b/index.html
@@ -7,8 +7,13 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+        <title>Most Wanted</title>
+  <link rel="stylesheet" href="styles.css">
     </head>
     <body>
+        <div class="topbar">
+            <button id="mostwantedbutton">Most Wanted</button>
+        </div>
         <img class="background" src="Background.png">
         <img class="background2" src="background2.JPEG">
         <div class="topbar"> 
@@ -37,14 +42,10 @@
         </div>
         <div class="banner2" id="banner2">
             <div class="requirements">
-                <h1>Join Our Legal Team:</h1>
+                <h1>Become A Lawyer</h1>
                 <p>We’re seeking a skilled lawyer to enhance our team!<br> 
-                    <br>You’ll be responsible for providing expert legal 
-                    <br>advice, drafting documents, and representing clients in diverse legal areas, such as contract law, family law, or criminal defense. 
-                    <br><br>The ideal candidate will hold a law degree, have the necessary legal 
-                    <br>credentials, and possess strong communication skills. 
-                    <br><br>We offer a competitive salary, comprehensivebenefits 
-                    <br>and opportunities for professional growth.<br>
+                    <br>A lawyer helps people, companies, or organizations with legal issues by offering advice, promotion, and representation. Attorneys possess extensive legal training and an in-depth understanding of legal concepts, procedures, and laws. They work in a variety of legal fields, including criminal defense, business law, family law, real estate law, and civil litigation.<br>
+                    <br>If you have a strong sense of justice, integrity, and a commitment to the law, we invite you to apply to become a lawyer. Join us in providing expert legal counsel and advocating for justice.<br>
                 </p>
             </div>
             <div class="applyform">
@@ -53,20 +54,51 @@
                 <button type="submit" onclick="openInNewTab()">Apply now!</button>
             </div>
         </div>
-        <div class="banner3" id="banner3">
+        <div class="banner4" id="banner4">
             <div class="requirements">
-                <h1>U.S. Marshals Service:</h1>
-                <p>- ratatatattatatatattaatatatattataatattatatatatattttatatatattatatat<br>ratatatattatatatattaatatatattataatattatatatatattttatatatattatatat</p>
-                <p>- ratatatattatatatattaatatatattataatattatatatatattttatatatattatatat<br>ratatatattatatatattaatatatattataatattatatatatattttatatatattatatat</p>
-                <p>- ratatatattatatatattaatatatattataatattatatatatattttatatatattatatat<br>ratatatattatatatattaatatatattataatattatatatatattttatatatattatatat</p>
-                <p>- ratatatattatatatattaatatatattataatattatatatatattttatatatattatatat<br>ratatatattatatatattaatatatattataatattatatatatattttatatatattatatat</p>
+                <h1>Become A Judge</h1>
+                <p>We’re seeking a skilled Judge to enhance our team!<br> 
+                    <br>Judges oversee court procedures, ensuring unbiased and fair judgment. Judges examine cases, evaluate the evidence, apply the appropriate laws, and make judgments. They must protect justice, maintain proper procedure, and ensure all parties are treated equally in court. 
+                    <br><br>If you have a strong sense of justice, integrity, and a commitment to the law, we invite you to apply to become a judge.  
+                </p>
+            </div>
+            <div class="applyform">
+                <label for="name"><br>Requirements:</label>
+                <p>● 13+ Years Of Age<br>● Own A Working Microphone<br>● Ability To Use Good SPaG<br>● Ability To Remain Professional At All Times <br>● Have A Basic Understanding Of The Law <br>● Ability To Be Active  <br>● Own Good Debating Skills <br>● Able to provide fair and realistic sentences.</p>
+                <button type="submit" onclick="openInNewTab()">Apply now!</button>
             </div>
         </div>
+        <div class="banner3" id="banner3">
+            <div class="requirements">
+                <h1>Join the U.S. Marshals Service</h1>
+                <p>
+                    <br>Are you ready to make a meaningful impact on national security and public safety? The U.S. Marshals Service is seeking dedicated and motivated individuals to join our elite team. 
+                    <br>As a U.S. Marshal, you will play a crucial role in upholding the rule of law, protecting the federal judiciary, and ensuring the effective operation of the federal justice system.  
+                    <br><br>Our mission includes protecting federal judges, courts, and court personnel, apprehending fugitives, managing and transporting federal prisoners, executing federal court orders, and managing seized assets acquired through illegal activities. 
+                    <br>credentials, and possess strong communication skills. 
+                    <br><br> 
+                </p>
+            </div>
+            <div class="applyform">
+                <label for="name"><br>Requirements:</label>
+                <p>● 13+ Years Of Age<br>● Own A Working Microphone<br>● Ability To Use Good SPaG<br>● Ability To Remain Professional At All Times <br>● Have A Basic Understanding Of The Law <br>● Ability To Be Active </p>
+                <button type="submit" onclick="openInNewTab()">Apply now!</button>
+            </div>
+        </div>
+        <div class="banner5" id="banner5">
+            <div class="requirements">
+                <h1>Most Wanted</h1>
+                <p> People shown in the following photos are dangerous and should be approached with the most extreme caution! If you come across one of them, contact the closest law enforcement agency as soon as possible.</p>
+            </div>
+            <div class="image-container">
+                <img src="lawyer.png">
+            </div>
+            
         <script>
             function openInNewTab() {
                 window.open('https://discord.gg/BEeEdwQz', '_blank');
             }
         </script>
-        <script src="script.js"></script>
+        <script src="script.js"></script
     </body>
 </html>
