--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
     <head>
         <title>Department Of Justice</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="icon" href="/favicon.png" type="image/x-icon">
         <link rel="stylesheet" href="style.css">
         <link rel="shortcut icon" href="/favicon.png" type="image/x-icon">
@@ -8,7 +9,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
         <title>Most Wanted</title>
-  <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="style-mobile.css">
     </head>
     <body>
         <div class="topbar">
@@ -40,6 +41,7 @@
             
             <img class="right_arrow" id="right_arrow" src="arrow.png">
         </div>
+        
         <div class="banner2" id="banner2">
             <div class="requirements">
                 <h1>Become A Lawyer</h1>
