mobile update2 marshal sivu korjattu

--- a/index.html
+++ b/index.html
@@ -88,11 +88,13 @@
             </div>
         </div>
         <div class="banner5" id="banner5">
-            <div class="requirements">
+            <div class="mostwanted">
                 <h1>Most Wanted</h1>
                 <p> People shown in the following photos are dangerous and should be approached with the most extreme caution! If you come across one of them, contact the closest law enforcement agency as soon as possible.</p>
             </div>
-            <div class="image-container">
+            <div class="wanted-photos">
+                <img src="lawyer.png">
+                <img src="lawyer.png">
                 <img src="lawyer.png">
             </div>
             
