--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         </div>
         <img class="background" src="Background.png">
         <img class="background2" src="background2.JPEG">
+        <img class="background3" src="background2.JPEG">
         <div class="topbar"> 
         </div> 
         <div class="banner1">
@@ -95,14 +96,31 @@
             <div class="wanted-photos">
                 <img src="lawyer.png">
                 <img src="lawyer.png">
-                <img src="lawyer.png">
             </div>
-            
+        </div>
+        <div class="banner6" id="banner6">
+            <div class="aboutus">
+                <h1>About Us</h1>
+                <p> plplpllalaalplpllaplalalplapplpallllpalaplppallololoolololo.<br>
+                    plplpllalaalplpllaplalalplapplpallllpalaplppallololoolololo.<br>
+                    <br>plplpllalaalplpllaaaaaaaaaaaaaaaaaaaaaaaaplalalplapplpallllpalaplppallololoolololo.<br>
+                    plplpllalaalplpllaplaaaaaaaaaaaaaaaaaaaaaaalalplapplpallllpalaplppallololoolololo.<br>
+                    plplpllalaalplpllaplaaaaaaaaaaaaaaaaaaaalalplapplpallllpalaplppallololoolololo.<br>
+                    <br>plplpllalaalplpllaplalalplapplpallllpalaplppallololoolololo.<br>
+                    plplpllalaalplpllaplalalplapplpallllpalaplppallololoolololo.<br>
+                    plplpllalaalplpllaplalalplapplpallllpalaplppallololoolololo.<br>
+                </p>
+            </div>
+        </div>
         <script>
             function openInNewTab() {
                 window.open('https://discord.gg/BEeEdwQz', '_blank');
             }
         </script>
-        <script src="script.js"></script
+        <script src="script.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/smoothscroll-polyfill/dist/smoothscroll.min.js"></script>
+        <script>
+            smoothscroll.polyfill();
+        </script>
     </body>
 </html>
