added topbar buttons

--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
     </head>
     <body>
         <div class="topbar">
-            <button id="mostwantedbutton">Most Wanted</button>
+            <button id="topBarButton1">Lawyer</button>
+            <button id="topBarButton2">Judge</button>
+            <button id="topBarButton3">About Us</button>
         </div>
         <img class="background" src="Background.png">
         <img class="background2" src="background2.JPEG">
         <img class="background3" src="background2.JPEG">
-        <div class="topbar"> 
-        </div> 
         <div class="banner1">
             <img class="left_arrow" id="left_arrow" src="arrow.png">
             <div class="shoe-holder" id="shoes">
