--- a/index.html
+++ b/index.html
@@ -101,14 +101,10 @@
         <div class="banner6" id="banner6">
             <div class="aboutus">
                 <h1>About Us</h1>
-                <p> plplpllalaalplpllaplalalplapplpallllpalaplppallololoolololo.<br>
-                    plplpllalaalplpllaplalalplapplpallllpalaplppallololoolololo.<br>
-                    <br>plplpllalaalplpllaaaaaaaaaaaaaaaaaaaaaaaaplalalplapplpallllpalaplppallololoolololo.<br>
-                    plplpllalaalplpllaplaaaaaaaaaaaaaaaaaaaaaaalalplapplpallllpalaplppallololoolololo.<br>
-                    plplpllalaalplpllaplaaaaaaaaaaaaaaaaaaaalalplapplpallllpalaplppallololoolololo.<br>
-                    <br>plplpllalaalplpllaplalalplapplpallllpalaplppallololoolololo.<br>
-                    plplpllalaalplpllaplalalplapplpallllpalaplppallololoolololo.<br>
-                    plplpllalaalplpllaplalalplapplpallllpalaplppallololoolololo.<br>
+                <p> The United States Marshals Service is the nation's oldest federal law enforcement agency, tasked with protecting the judiciary, apprehending fugitives, managing and transporting prisoners, and executing federal court orders. <br>
+                    We are committed to upholding justice and ensuring the safety of our communities. <br>
+                    The Department of Justice enforces the law, defends the interests of the United States, ensures public safety, and seeks just punishment for those guilty of unlawful behavior. <br>
+                    We are dedicated to upholding justice and protecting the rights of all citizens.
                 </p>
             </div>
         </div>
