--- a/index.html
+++ b/index.html
@@ -101,9 +101,11 @@
         <div class="banner6" id="banner6">
             <div class="aboutus">
                 <h1>About Us</h1>
-                <p> The United States Marshals Service is the nation's oldest federal law enforcement agency, tasked with protecting the judiciary, apprehending fugitives, managing and transporting prisoners, and executing federal court orders. <br>
+                <p> The United States Marshals Service is the nation's oldest federal law enforcement agency, tasked with protecting the judiciary, <br>
+                    apprehending fugitives, managing and transporting prisoners, and executing federal court orders. <br>
                     We are committed to upholding justice and ensuring the safety of our communities. <br>
-                    The Department of Justice enforces the law, defends the interests of the United States, ensures public safety, and seeks just punishment for those guilty of unlawful behavior. <br>
+                    The Department of Justice enforces the law, defends the interests of the United States, ensures public safety, <br>
+                    and seeks just punishment for those guilty of unlawful behavior. <br>
                     We are dedicated to upholding justice and protecting the rights of all citizens.
                 </p>
             </div>
